Add history tests